--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "knex": "knex",
     "lint": "eslint  --ignore-pattern public/js/vendor",
     "nf": "nf start",
-    "start": "nodemon server.js",
+    "start": "node ./bin/www",
+    "nodemon": "node server.js",
+    "heroku-postbuild": "knex migrate:rollback; knex migrate:latest; knex seed:run;",
     "test": "mocha"
   },
   "repository": {
@@ -48,6 +50,6 @@
     "supertest": "^1.2.0"
   },
   "engines": {
-    "node": "7.4.0"
+    "node": "8.9.4"
   }
 }
