--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Create a web application to manage your book collection",
   "main": "server.js",
   "scripts": {
-    "heroku-postbuild": "knex migrate:latest",
     "knex": "knex",
     "lint": "eslint  --ignore-pattern public/js/vendor",
     "nf": "nf start",
-    "start": "node ./bin/www",
-    "nodemon": "node server.js",
+    "start": "node server.js",
+    "nodemon": "nodemon server.js",
     "heroku-postbuild": "knex migrate:rollback; knex migrate:latest; knex seed:run;",
     "test": "mocha"
   },
